[package]
name = "fc-consensus"
version = "1.0.1-clover"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
sp-inherents = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
fp-consensus = { path = "../../primitives/consensus" }
fp-rpc = { path = "../../primitives/rpc" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
fc-db = { path = "../db" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.1"}
async-trait = "0.1.42"
